@@ -1,10 +1,10 @@
 Error: overextending my bounds dude :( from: class java.util.NoSuchElementException
    tcatch4.sl:45 public static java.util.ArrayList java.util.Collections.list(java.util.Enumeration)
-   <internal>:0 &closure[tcatch4.sl:7-15]#3 as public abstract java.lang.Object java.util.Enumeration.nextElement()
+   <Java>:-1 &closure[tcatch4.sl:7-15]#3 as public abstract java.lang.Object java.util.Enumeration.nextElement()
    tcatch4.sl:11 &invoke()
    tcatch4.sl:36 <origin of exception>
 Trying again... what will java do?
 Error: haha... testing bish!@#$ from: class java.lang.RuntimeException
    tcatch4.sl:56 public static java.util.ArrayList java.util.Collections.list(java.util.Enumeration)
-   <internal>:0 &closure[tcatch4.sl:57]#6 as public abstract boolean java.util.Enumeration.hasMoreElements()
+   <Java>:-1 &closure[tcatch4.sl:57]#6 as public abstract boolean java.util.Enumeration.hasMoreElements()
    tcatch4.sl:57 <origin of exception>
